# lidl-to-grocy

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci-build-test.yml  ci-formatting.yml
grocy/: Cargo.toml
grocy/src/: lib.rs  structs.rs
ir/: Cargo.toml
ir/src/: lib.rs
lidl/: Cargo.toml
lidl/src/: error.rs  html_receipt.rs  lib.rs  structs.rs
lidl/test/: receipt.html  receipt_duplicate_spans.html
nix/: package.nix
src/: dynprompt.rs  error.rs  grocy.rs  lidl.rs  main.rs
