[package]
name = "lidl-to-grocy"
description = "Import receipts from Lidl Plus to Grocy, right from your terminal!"
authors = ["Diogo Correia <me@diogotc.com>"]
version.workspace = true
edition.workspace = true

[workspace]
members = [".", "grocy", "lidl"]

[workspace.package]
version = "1.1.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "clock", "std"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
colored = "2.1.0"
confy = "0.6.0"
grocy = { path = "grocy" }
inquire = { version = "0.6.2", features = ["date"] }
lidl = { path = "lidl" }
serde.workspace = true
thiserror.workspace = true
